--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "start": "nuxt start"
   },
   "dependencies": {
-    "nuxt": "^2.14.7",
-    "tailwindcss": "^1.9.6"
+    "@tailwindcss/postcss7-compat": "^2.0.2",
+    "autoprefixer": "^9.8.6",
+    "nuxt": "^2.14.12",
+    "postcss": "^7.0.35",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
   },
   "devDependencies": {
-    "@nuxt/types": "^2.14.7",
-    "@nuxtjs/tailwindcss": "^3.2.0",
+    "@nuxt/types": "^2.14.12",
+    "@nuxtjs/tailwindcss": "^3.4.2",
     "postcss-preset-env": "^6.7.0"
   }
 }
