--- a/package.json
+++ b/package.json
@@ -9,16 +9,11 @@
     "start": "nuxt start"
   },
   "dependencies": {
-    "@tailwindcss/postcss7-compat": "^2.0.2",
-    "autoprefixer": "^9.8.6",
-    "nuxt": "^2.14.12",
-    "postcss": "^7.0.35",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
+    "nuxt": "^2.15.7",
+    "tailwindcss": "^2.2.7"
   },
   "devDependencies": {
-    "@nuxt/types": "^2.14.12",
     "@nuxtjs/color-mode": "^2.0.3",
-    "@nuxtjs/tailwindcss": "^3.4.2",
-    "postcss-preset-env": "^6.7.0"
+    "@nuxtjs/tailwindcss": "^4.2.1"
   }
 }
