--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "tailwindcss": "^2.2.7"
   },
   "devDependencies": {
+    "autoprefixer": "^10.3.1",
     "@nuxtjs/color-mode": "^2.0.3",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "postcss": "^8.3.6"
